[gd_scene load_steps=5 format=3 uid="uid://dmdkbf1g538oa"]

[ext_resource type="Script" uid="uid://ckl87dqapn6g0" path="res://scenes/enemies/duke/duke.gd" id="1_1mbr4"]
[ext_resource type="SpriteFrames" uid="uid://ctkb40mtguqt" path="res://scenes/enemies/duke/duke_frames.tres" id="1_3qv6u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1mbr4"]
size = Vector2(24.875, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qv6u"]
size = Vector2(12, 15)

[node name="Duke" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_1mbr4")

[node name="speed_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="DukeSheet" type="AnimatedSprite2D" parent="."]
process_mode = 3
position = Vector2(0, 0.25)
scale = Vector2(1, 1.02174)
sprite_frames = ExtResource("1_3qv6u")
animation = &"duke_swim_front"

[node name="CollisonShapeSidways" type="CollisionShape2D" parent="."]
position = Vector2(2.5625, 5)
shape = SubResource("RectangleShape2D_1mbr4")

[node name="CollisionFront" type="CollisionShape2D" parent="."]
position = Vector2(-14, 5.5)
shape = SubResource("RectangleShape2D_3qv6u")

[connection signal="timeout" from="speed_timer" to="." method="_on_speed_timer_timeout"]
[connection signal="animation_finished" from="DukeSheet" to="." method="_on_duke_sheet_animation_finished"]
[connection signal="animation_looped" from="DukeSheet" to="." method="_on_duke_sheet_animation_looped"]
